[metadata]
name = mri_unet
version = 0.0.1
description = A 2D/3D UNet with support for complex data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uwmri/mri_unet
license = MIT
platform = any
author = Kevin M. Johnson
author_email = kmjohnson3@wisc.edu

[options]
packages = mri_unet
install_requires =
    torch >= 1.10
python_requires = >= 3.6
tests_require =
    torch-summary

